# Susu-koresebely-language-translator-learning-App

./: .gitignore  AGENT.md  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/routes/: translate.py
apps/api/tests/: test_api.py
backend/nginx/: default.conf
backend/python-services/: app.py
data/audio/: xɔrɔ_01.json
data/dictionaries/: susu_en_seed.json
data/script/characters/: ka.json
docs/: README.md  architecture.md
